--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-router": "4"
   },
   "scripts": {
     "dev": "vite"
